load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "database",
    srcs = ["database.go"],
    importpath = "github.com/squzy/squzy/internal/database",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/database/clickhouse",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
    ],
)

go_test(
    name = "database_test",
    srcs = ["database_test.go"],
    embed = [":database"],
    deps = ["@com_github_stretchr_testify//assert"],
)
