load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpctools",
    srcs = ["grpctools.go"],
    importpath = "github.com/squzy/squzy/internal/grpctools",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/helpers",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "grpctools_test",
    srcs = ["grpctools_test.go"],
    embed = [":grpctools"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
