load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "helpers",
     srcs = ["helpers.go"],
     importpath = "squzy/internal/helpers",
     visibility = ["//visibility:public"],
     deps = [
        "//internal/scheduler-config-storage:storage",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
     ],

)

go_test(
    name = "helpers_test",
    srcs = [
        "helpers_test.go",
    ],
    embed = [":helpers"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library"
    ]
)