load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "helpers",
    srcs = ["helpers.go"],
    importpath = "github.com/squzy/squzy/internal/helpers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/scheduler-config-storage",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
    ],
)

go_test(
    name = "helpers_test",
    srcs = ["helpers_test.go"],
    embed = [":helpers"],
    deps = [
        "//internal/scheduler-config-storage",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@com_github_stretchr_testify//assert",
    ],
)
