load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "go_default_library",
     srcs = ["httptools.go"],
     importpath = "squzy/internal/httptools",
     visibility = ["//visibility:public"],
     deps = [
         "//internal/helpers:go_default_library",
     ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "httptools_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library"
    ],
)