load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httptools",
    srcs = ["httptools.go"],
    importpath = "github.com/squzy/squzy/internal/httptools",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/helpers"],
)

go_test(
    name = "httptools_test",
    srcs = ["httptools_test.go"],
    embed = [":httptools"],
    deps = ["@com_github_stretchr_testify//assert"],
)
