load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "job-executor",
     srcs = ["executor.go"],
     importpath = "squzy/internal/job-executor",
     visibility = ["//visibility:public"],
     deps = [
        "//internal/httpTools:httpTools",
        "//internal/storage:storage",
        "//internal/semaphore:semaphore",
        "//internal/job:job",
        "//internal/sitemap-storage:sitemap-storage",
        "//internal/scheduler-config-storage:storage",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
     ],

)

go_test(
    name = "job-executor_test",
    srcs = [
        "executor_test.go",
    ],
    embed = [":job-executor"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ]
)