load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "job-executor",
    srcs = ["executor.go"],
    importpath = "github.com/squzy/squzy/internal/job-executor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cassandra-tools",
        "//internal/httptools",
        "//internal/job",
        "//internal/logger",
        "//internal/scheduler-config-storage",
        "//internal/semaphore",
        "//internal/sitemap-storage",
        "//internal/storage",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)

go_test(
    name = "job-executor_test",
    srcs = ["executor_test.go"],
    embed = [":job-executor"],
    deps = [
        "//internal/httptools",
        "//internal/job",
        "//internal/scheduler-config-storage",
        "//internal/semaphore",
        "//internal/sitemap-storage",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)
