load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "go_default_library",
     srcs = [
         "job.go",
         "job_http.go",
         "job_grpc.go",
         "job_tcp.go",
         "job_sitemap.go",
         "job_json_http_value.go",
     ],
     importpath = "squzy/internal/job",
     visibility = ["//visibility:public"],
     deps = [
        "//internal/httpTools:go_default_library",
        "//internal/sitemap-storage:go_default_library",
        "//internal/parsers:go_default_library",
        "//internal/semaphore:go_default_library",
        "//internal/helpers:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "//internal/scheduler-config-storage:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@com_github_squzy_squzy_generated//generated/proto/v1:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_tidwall_gjson//:go_default_library"
     ]
)

go_test(
    name = "go_default_test",
    srcs = [
        "job_test.go",
        "job_http_test.go",
        "job_grpc_test.go",
        "job_tcp_test.go",
        "job_sitemap_test.go",
        "job_json_http_value_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ]
)