load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "job",
    srcs = [
        "job.go",
        "job_cassandra.go",
        "job_grpc.go",
        "job_http.go",
        "job_json_http_value.go",
        "job_sitemap.go",
        "job_ssl.go",
        "job_tcp.go",
    ],
    importpath = "github.com/squzy/squzy/internal/job",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cassandra-tools",
        "//internal/helpers",
        "//internal/httptools",
        "//internal/scheduler-config-storage",
        "//internal/semaphore",
        "//internal/sitemap-storage",
        "@com_github_golang_protobuf//ptypes/timestamp",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@com_github_tidwall_gjson//:gjson",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "job_test",
    srcs = [
        "job_cassandra_test.go",
        "job_grpc_test.go",
        "job_http_test.go",
        "job_json_http_value_test.go",
        "job_sitemap_test.go",
        "job_ssl_test.go",
        "job_tcp_test.go",
        "job_test.go",
    ],
    embed = [":job"],
    deps = [
        "//internal/parsers",
        "//internal/scheduler-config-storage",
        "//internal/semaphore",
        "@com_github_gocql_gocql//:go_default_library",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)
