load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/squzy/squzy/internal/logger",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/logger/config",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)