load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "parsers",
     srcs = ["sitemap.go"],
     importpath = "squzy/internal/parsers",
     visibility = ["//visibility:public"],
     deps = [
     ],

)

go_test(
    name = "parsers_test",
    srcs = [
        "sitemap_test.go",
    ],
    embed = [":parsers"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library"
    ],
    data = [
        "//apps/internal/parsers:tests_file"
    ]
)

filegroup(
    name = "tests_file",
    srcs = [
        "valid.xml",
        "invalid.xml",
    ],
    visibility = ["//visibility:public"],
)