load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
     name = "go_default_library",
     srcs = ["sitemap.go"],
     importpath = "squzy/internal/parsers",
     visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "sitemap_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library"
    ],
    data = [
        "//internal/parsers:tests_file"
    ]
)

filegroup(
    name = "tests_file",
    srcs = [
        "valid.xml",
        "invalid.xml",
    ],
    visibility = ["//visibility:public"],
)