load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parsers",
    srcs = ["sitemap.go"],
    importpath = "github.com/squzy/squzy/internal/parsers",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "parsers_test",
    srcs = ["sitemap_test.go"],
    embed = [":parsers"],
    deps = ["@com_github_stretchr_testify//assert"],
)
