load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scheduler-config-storage",
    srcs = ["storage.go"],
    importpath = "github.com/squzy/squzy/internal/scheduler-config-storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_squzy_mongo_helper//:mongo_helper",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)

go_test(
    name = "scheduler-config-storage_test",
    srcs = ["storage_test.go"],
    embed = [":scheduler-config-storage"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)
