load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scheduler-storage",
    srcs = ["scheduler-storage.go"],
    importpath = "github.com/squzy/squzy/internal/scheduler-storage",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/scheduler"],
)

go_test(
    name = "scheduler-storage_test",
    srcs = ["scheduler-storage_test.go"],
    embed = [":scheduler-storage"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)
