load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scheduler",
    srcs = ["scheduler.go"],
    importpath = "github.com/squzy/squzy/internal/scheduler",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/job-executor",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)

go_test(
    name = "scheduler_test",
    srcs = ["scheduler_test.go"],
    embed = [":scheduler"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson/primitive",
    ],
)
