load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sitemap-storage",
    srcs = ["sitemap-storage.go"],
    importpath = "github.com/squzy/squzy/internal/sitemap-storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/httptools",
        "//internal/parsers",
    ],
)

go_test(
    name = "sitemap-storage_test",
    srcs = ["sitemap-storage_test.go"],
    embed = [":sitemap-storage"],
    deps = [
        "//internal/parsers",
        "@com_github_stretchr_testify//assert",
    ],
)
