load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "external_storage.go",
        "storage.go",
    ],
    importpath = "github.com/squzy/squzy/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/grpctools",
        "//internal/job",
        "//internal/logger",
        "@com_github_google_uuid//:uuid",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "external_storage_test.go",
        "storage_test.go",
    ],
    embed = [":storage"],
    deps = [
        "//internal/grpctools",
        "//internal/job",
        "@com_github_squzy_squzy_generated//generated/github.com/squzy/squzy_proto",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
